--- a/PoemEngineUi/qtquickcontrols2.conf
+++ b/PoemEngineUi/qtquickcontrols2.conf
@@ -3,9 +3,9 @@
 ; http://doc.qt.io/qt-5/qtquickcontrols2-configuration.html
 
 [Controls]
-Style=Universal
+Style=Material
 
-[Universal]
+[Material]
 Theme=Light
 ;Accent=Steel
 ;Foreground=Brown
