--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(PoemEngine VERSION 0.0.5 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 find_package(Qt6 REQUIRED COMPONENTS Quick)
 find_package(Qt6 REQUIRED COMPONENTS LinguistTools)
 
@@ -29,6 +33,7 @@ qt_add_qml_module(appPoemEngine
         PoemEngineUi/PopupInfo.qml
         PoemEngineUi/PopupPoem.qml
         PoemEngineUi/SettingsDialog.qml
+        PoemEngineUi/PzTextItem.qml
     SOURCES
         poemmanager.cpp
         poemmanager.h
@@ -53,7 +58,8 @@ qt_add_resources(appPoemEngine "resources"
     FILES
         data/qts.csv
         data/ju_tab.csv
-        data/psy.csv
+        data/psy.json
+        data/unihan-extend.json
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -84,11 +90,11 @@ install(TARGETS appPoemEngine
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    add_custom_command(TARGET appPoemEngine POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-            "${CMAKE_BINARY_DIR}/android-build-appPoemEngine/build/outputs/apk/release/android-build-appPoemEngine-release-signed.apk"
-            "${CMAKE_BINARY_DIR}/PoemEngine_v${PROJECT_VERSION}.apk"
-    )
-endif()
+# if(CMAKE_BUILD_TYPE STREQUAL "Release")
+#     add_custom_command(TARGET appPoemEngine POST_BUILD
+#         COMMAND ${CMAKE_COMMAND} -E copy
+#             "${CMAKE_BINARY_DIR}/android-build-appPoemEngine/build/outputs/apk/release/android-build-appPoemEngine-release-signed.apk"
+#             "${CMAKE_BINARY_DIR}/PoemEngine_v${PROJECT_VERSION}.apk"
+#     )
+# endif()
 
