temp - 调整文件结构；整理`PoemManager`变量；实现诗句检索
- 删除`juproxymodel.cpp`、`appsettings.cpp`，相关内容挪到对应头文件；
- `Trie`功能挪到新的`trie.h`中。

- 修改`PoemManager::load`中变量命名，现在什么映射到什么一眼能看懂；
- 修改`PoemManager`功能，完成内容读取、诗词搜索（只有诗句）。
- 记录读取、搜索时间戳。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,17 +41,15 @@ qt_add_qml_module(appPoemEngine
         poemmanager.h
         qmlinterface.cpp
         qmlinterface.h
-        juproxymodel.cpp
+
         juproxymodel.h
         appsettings.h
-        appsettings.cpp
+        trie.h
+
     RESOURCES
         CHANGELOG.md
         LICENSE.md
         THIRD_PARTY_LICENSES.txt
-        QML_FILES
-        RESOURCES
-        QML_FILES
 )
 
 set_source_files_properties(AppSettings.qml
